--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile:sass": "node-sass ./public/stylesheets/main.scss ./public/stylesheets/main.css -w"
-
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
-    "express-handlebars": "^3.0.0",
+    "express-handlebars": "^6.0.3",
+    "mongoose": "^6.2.4",
     "node-sass": "^7.0.1"
   }
 }
