--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.2",
     "express": "^4.16.4",
     "express-handlebars": "^6.0.3",
     "mongoose": "^6.2.4",
