--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node app.js",
     "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "seed": "node models/seeds/restaurantSeeder.js",
     "compile:sass": "node-sass ./public/stylesheets/main.scss ./public/stylesheets/main.css -w"
   },
   "keywords": [],
