--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.19.2",
     "express": "^4.16.4",
     "express-handlebars": "^6.0.3",
+    "method-override": "^3.0.0",
     "mongoose": "^6.2.4",
     "node-sass": "^7.0.1"
   }
