feat: add user login feature via passport

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "express-session": "^1.17.2",
     "method-override": "^3.0.0",
     "mongoose": "^6.2.4",
-    "node-sass": "^7.0.1"
+    "node-sass": "^7.0.1",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0"
   }
 }
