--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.2",
+    "connect-flash": "^0.1.1",
     "express": "^4.16.4",
     "express-handlebars": "^6.0.3",
     "express-session": "^1.17.2",
