--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.2",
     "connect-flash": "^0.1.1",
+    "dotenv": "^16.0.0",
     "express": "^4.16.4",
     "express-handlebars": "^6.0.3",
     "express-session": "^1.17.2",
@@ -24,6 +25,7 @@
     "mongoose": "^6.2.4",
     "node-sass": "^7.0.1",
     "passport": "^0.5.2",
+    "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0"
   }
 }
