modify todoSeeder, passport.js

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
+    "seed": "node models/seeds/restSeeder.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "seed": "node models/seeds/restaurantSeeder.js",
     "compile:sass": "node-sass ./public/stylesheets/main.scss ./public/stylesheets/main.css -w"
   },
   "keywords": [],
